modify online user service